# vigil

./: .env.example  .gitignore  Cargo.toml  README.md  package.json
cli/: create-uptime-market.ts  create-yield-market.ts  init-lp.ts  list-markets.ts  package-lock.json  package.json  trade.ts  tsconfig.json
demo/: package-lock.json  package.json  tailwind.config.ts
demo/src/app/: globals.css  layout.tsx  page.tsx
demo/src/components/: ncn-selector.tsx  scenario-panel.tsx  uptime-market-panel.tsx  yield-market-panel.tsx
demo/src/lib/: ncn-presets.ts  pricing.ts  simulation.ts  store.ts
keeper/: fragmetric-client.ts  index.ts  jito-yield-client.ts  ncn-monitor.ts  package-lock.json  package.json  retry.ts  signal-detector.ts  tsconfig.json  uptime-sync.ts  yield-sync.ts
programs/ncn-oracle/: Cargo.toml
programs/ncn-oracle/src/: errors.rs  lib.rs  state.rs
programs/ncn-oracle/src/instructions/: aggregated_feed.rs  mod.rs  performance_feed.rs  signal.rs  yield_feed.rs
programs/ncn-uptime-matcher/: Cargo.toml
programs/ncn-uptime-matcher/src/: errors.rs  instructions.rs  lib.rs  state.rs  uptime_pricing.rs
programs/restaking-yield-matcher/: Cargo.toml
programs/restaking-yield-matcher/src/: errors.rs  instructions.rs  lib.rs  state.rs  yield_pricing.rs
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: index.ts  ncnOracle.ts  types.ts  uptimeMatcher.ts  yieldMatcher.ts
