[package]
name = "ncn-oracle"
version = "0.1.0"
description = "NCN Performance and Yield Oracle for Restaking Risk Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ncn_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
